--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.59.2
@@ -7,13 +8,18 @@ matplotlib==3.10.6
 numpy==2.3.2
 packaging==25.0
 pandas==2.3.2
+pefile==2023.2.7
 pillow==11.3.0
+pyinstaller==6.15.0
+pyinstaller-hooks-contrib==2025.8
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pywin32-ctypes==0.2.3
 scikit-learn==1.7.1
 scipy==1.16.1
 seaborn==0.13.2
+setuptools==80.9.0
 six==1.17.0
 threadpoolctl==3.6.0
 tzdata==2025.2
